# lets-build-wasm-interpreter

./: README.md
lesson-01-loading/: Cargo.toml  index.html  interpreter.wasm
lesson-01-loading/src/: lib.rs
lesson-02-main/: Cargo.toml  Makefile  interpreter.wasm  simple.wasm
lesson-02-main/src/: lib.rs
simple/: Cargo.toml  Makefile
simple/src/: lib.rs
