[package]
name = "lesson"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
malloc = "0.0.4"
executor = "0.7.0"
watson = "0.3.0"
webassembly = "0.5.0"
