[package]
name = "lesson"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
watson = {path="../../watson", version="0.8.0"}
wee_alloc = "0.4.5"
